--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 <html>
 	<head>
 		<title>Workout App</title>
-		<meta name="description" content="vytvořeno bez spolupráce s Ondrou">
+		<meta name="description" content="nope">
 		<meta name="author" content="ZlomenyMesic">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	</head>
-	
-	<frameset rows="*" border=0 bordercolor=black>
-		<frame src="HlavniRam.html" name="HlavniRam" frameborder=0 scrolling=no noresize>
-		</frame>
-		<noframes>R.I.P.</noframes>
-	</frameset>
+	<p align=center>
+		<a class="style" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/ZlomenyMesic/WorkoutApp/blob/main/WorkoutAppInstaller.msi"><i class="fa fa-download"></i> Download</a>
 </html>
