--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN>
 
 <html>
+			<style name="text/css">
+			.style {
+  				font-family: 'Outfit', sans-serif;
+  				text-decoration : none;
+  				background-color : #066b68;
+  				color : #b2dbda;
+  				padding : 7px 20px 7px 20px;
+				border-width: 4px;
+				border-style: double;
+				border-color: #1d3b3a;
+				border-radius: 25px;
+			}
+	</style>
 	<head>
 		<title>Workout App</title>
 		<meta name="description" content="nope">
