--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	</head>
 	<p align=center>
-		<a class="style" href=""><i class="fa fa-download"></i> Download</a>
+		<a class="style" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/ZlomenyMesic/H-Shell/blob/main/H-Shell.exe"><i class="fa fa-download"></i> Download</a>
 </html>
