--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <html>
 			<style name="text/css">
 			.style {
-  				font-family: 'Outfit', sans-serif;
-  				text-decoration : none;
-  				background-color : #066b68;
-  				color : #b2dbda;
-  				padding : 7px 20px 7px 20px;
-				border-width: 4px;
-				border-style: double;
-				border-color: #1d3b3a;
-				border-radius: 25px;
+				  background-color: #ffffff;
+			      color: #000000;
+			      padding: 15px 25px;
+                  border: none;
 			}
 	</style>
 	<head>
@@ -20,6 +15,18 @@
 		<meta name="author" content="ZlomenyMesic">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	</head>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 	<p align=center>
 		<a class="style" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/ZlomenyMesic/H-Shell/blob/main/H-Shell.exe"><i class="fa fa-download"></i> Download</a>
 	</p>
