--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			}
 	</style>
 	<head>
-		<title>Workout App</title>
-		<meta name="description" content="nope">
+		<title>H-Shell Download</title>
+		<meta name="description" content="This program is malicious.">
 		<meta name="author" content="ZlomenyMesic">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	</head>
