--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</style>
 	<head>
 		<title>H-Shell Download</title>
-		<meta name="description" content="You've been trolled!">
+		<meta name="description" content="Killbot">
 		<meta name="author" content="ZlomenyMesic">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	</head>
