--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			}
 	</style>
 	<head>
-		<title>H-Shell Download</title>
+		<title>Killbot</title>
 		<meta name="description" content="Killbot">
 		<meta name="author" content="ZlomenyMesic">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
