--- a/index.html
+++ b/index.html
@@ -30,4 +30,9 @@
 	<p align=center>
 		<a class="style" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/ZlomenyMesic/Killbot/blob/main/Killbot.exe"><i class="fa fa-download"></i> Download</a>
 	</p>
+	<br>
+	<br>
+	<p align=center>
+		<a class="style" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/ZlomenyMesic/Killbot/blob/main/Killbot.exe"><i class="fa fa-download"></i> Download</a>
+	</p>
 </html>
