--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</style>
 	<head>
 		<title>Killbot</title>
-		<meta name="description" content="Killbot">
+		<meta name="description" content="Killbot Download">
 		<meta name="author" content="ZlomenyMesic">
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	</head>
@@ -33,6 +33,6 @@
 	<br>
 	<br>
 	<p align=center>
-		<a class="style" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/ZlomenyMesic/Killbot/blob/main/Killbot.exe"><i class="fa fa-download"></i> Download</a>
+		<a class="style" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/ZlomenyMesic/Killbot/blob/main/KillbotDV.exe"><i class="fa fa-download"></i> Download (Destructive Version)</a>
 	</p>
 </html>
